--- a/index.css
+++ b/index.css
@@ -13,9 +13,11 @@ body {
 }
 
 .headers { 
-    margin-top: 68px;
+    margin-top: 0px;
     height: 36px;
     width: 149px;
+    font-size: xx-large;
+    font-weight: bolder;
 }
 
 .container {
@@ -53,6 +55,10 @@ body {
 }
 
 #footer { 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     background-color: #0d1125;
     padding: 30px;
 }
@@ -67,6 +73,7 @@ body {
 
 #reset-btn:hover{
     background-color:#4359bb;
+    transform: scale(1.1) perspective(1px)
 }
 
 #home-score-container { 
